# cot-site

./: .dockerignore  .gitignore  .gitmodules  .pre-commit-config.yaml  Cargo.toml  Containerfile  Dockerfile  LICENSE-MIT  README.md  bacon.toml  build.rs  compose.dev.yml  compose.yml  entrypoint.sh
.github/workflows/: docker.yml  rust.yml
cot-site-common/: Cargo.toml
cot-site-common/src/: guides.rs  lib.rs  md_pages.rs  utils.rs
cot-site-macros/: Cargo.toml  build.rs
cot-site-macros/src/: guides.rs  lib.rs  md_pages.rs
cot-site-macros/src/md_pages/: rendering.rs
docs/v0.1/: db-models.md  error-pages.md  templates.md
docs/v0.1/docs/: error-pages.md  static-files.md  testing.md
docs/v0.2/: db-models.md  static-files.md
docs/v0.2/docs/: db-models.md  error-pages.md  testing.md
docs/v0.3/: error-pages.md  forms.md  static-files.md  templates.md  testing.md
docs/v0.3/docs/: testing.md
docs/v0.4/: admin-panel.md  db-models.md  introduction.md  templates.md
docs/v0.4/docs/: error-pages.md  openapi.md
docs/v0.5/: admin-panel.md  caching.md  db-models.md  error-pages.md  introduction.md  openapi.md  upgrade-guide.md
nginx/: nginx.conf
scripts/: generate-favicons.sh
scss/: custom.scss  main.scss  syntax-highlighting.scss
src/: code_samples.rs  guides.rs  lib.rs  main.rs  search.rs
src/guide/: admin-panel.md  authentication.md  db-models.md  error-pages.md  forms.md  introduction.md  static-files.md  templates.md  testing.md
src/md-pages/: admin-panel.md  db-models.md  faq.md  forms.md  introduction.md  licenses.md  templates.md
src/md-pages/master/: admin-panel.md  caching.md  db-models.md  error-pages.md  framework-comparison.md  introduction.md  openapi.md  sending-emails.md  static-files.md  templates.md  testing.md  upgrade-guide.md
src/md-pages/v0.1/: admin-panel.md  db-models.md  error-pages.md  forms.md  introduction.md  static-files.md  templates.md  testing.md
src/md-pages/v0.2/: admin-panel.md  db-models.md  forms.md  introduction.md  static-files.md  templates.md  testing.md
src/md-pages/v0.3/: admin-panel.md  error-pages.md  forms.md  introduction.md  openapi.md  static-files.md  templates.md  testing.md
src/md-pages/v0.4/: admin-panel.md  db-models.md  forms.md  introduction.md  openapi.md  static-files.md  templates.md  testing.md
src/md-pages/v0.5/: admin-panel.md  caching.md  db-models.md  forms.md  framework-comparison.md  introduction.md  openapi.md  sending-emails.md  static-files.md  templates.md  testing.md  upgrade-guide.md
static/images/: site.webmanifest
static/static/css/: guide_chapters.css
static/static/js/: code-copy.js  search.js
templates/: _base.html  _guide_chapters.html  _guide_toc_item.html  _md_page_toc.html  error.html  guide.html  index.html  md_page.html
