[package]
name = "cot-site-macros"
version = "0.1.0"
edition = "2024"

[lib]
proc-macro = true

[features]
nightly = []

[dependencies]
comrak.workspace = true
cot-site-common.workspace = true
proc-macro2.workspace = true
quote.workspace = true
serde_yml.workspace = true
syn.workspace = true
syntect = { workspace = true, features = ["dump-load"] }

[build-dependencies]
syntect = { workspace = true, features = ["dump-create"] }
