[package]
name = "cot-site-macros"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"

[lib]
proc-macro = true

[features]
nightly = []

[dependencies]
comrak.workspace = true
cot-site-common.workspace = true
proc-macro2.workspace = true
quote.workspace = true
serde_yml.workspace = true
syn.workspace = true
syntect = { workspace = true, features = ["dump-load"] }

[build-dependencies]
rustversion.workspace = true
syntect = { workspace = true, features = ["dump-create"] }
